Fix alignment of feature image on mobile

--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -1067,12 +1067,13 @@ body:where(.home-template) .gh-outer {
     & > .gh-article-image {
       --overlay-gradient-direction: 0deg;
       position: absolute;
-      top: 0;
+      top: -4.2em;
       right: 0;
       z-index: -1;
       width: 100%;
       @media (min-width: 960px) {
         width: 66%;
+        top: 0;
       }
       &::before {
         content: "";
@@ -1083,10 +1084,11 @@ body:where(.home-template) .gh-outer {
         background-image: linear-gradient(
           var(--overlay-gradient-direction),
           var(--background-color) 0%,
-          hsl(0 9% 96% / 0.25) 50%
+          hsl(0 9% 96% / 0.25) var(--overlay-gradient-stop, 100%)
         );
         @media (min-width: 960px) {
           --overlay-gradient-direction: 90deg;
+          --overlay-gradient-stop: 50%;
         }
       }
     }
